change icon and font

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Secure and accessible password manager">
+    <meta name="description" content="An Alpine.js Password Manager application    ">
     <link rel="icon" type="image/png" href="favicon.png">
     <title>Alpine.js · Password Manager</title>
 
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="bg-gray-100 text-gray-900 gradient-bg">
+<body class="bg-gray-100 text-gray-900 gradient-bg antialiased">
 
     <main class="min-h-screen flex flex-col md:flex-row items-center justify-center gap-4 p-4" x-data="passwordManager"
         x-init="init">
