--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 
             <div class="mb-4">
-                <button type="button" @click="copyToClipboard"
+                <button type="button" @click="copyToClipboard()"
                     class="w-full py-2 px-4 bg-blue-600 text-white rounded-md font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                     <i class="ph ph-copy"></i> Copy to Clipboard
                 </button>
@@ -86,28 +86,35 @@
 
             <div class="flex-1">
                 <p class="block text-sm font-medium text-gray-700">Stored: <strong
-                        x-text="`${passwords.length}/5`"></strong></p>
+                        x-text="`${passwords.length}/${maxPasswords}`"></strong></p>
                 <div x-cloak x-show="passwords.length > 0" class="space-y-2 mb-4">
                     <template x-for="(item, index) in passwords" :key="index">
-                        <div class="flex justify-between items-center bg-gray-50 p-2 rounded-md border border-gray-300">
-                            <span x-text="item.name"></span>
-                            <span x-text="item.password" style="display: none;"></span>
-                            <span x-text="getPasswordStrength(item.password)" class="text-sm text-gray-500"></span>
-                            <div class="flex items-center">
-                                <button @click="copyToClipboard(item.password)"
-                                    class="text-blue-600 hover:underline mr-2">
-                                    <i class="ph ph-copy"></i>
-                                </button>
-                                <button @click="deletePassword(index)" class="text-red-600 hover:underline">
-                                    <i class="ph ph-trash"></i>
-                                </button>
+                        <div class="flex flex-col bg-gray-50 p-2 rounded-md border border-gray-300">
+                            <div class="flex justify-between items-center">
+                                <p x-text="item.name"></p>
+                                <div class="flex items-center gap-x-2 justify-center">
+                                    <p x-text="getPasswordStrength(item.password)" class="text-sm text-gray-500"></p>
+                                    <button @click="passwords[index].show = !passwords[index].show"
+                                        class="hover:underline flex">
+                                        <i class="ph" :class="passwords[index]?.show ? 'ph-eye': 'ph-eye-slash'"></i>
+                                    </button>
+                                    <button @click="copyToClipboard(item.password)"
+                                        class="text-blue-600 hover:underline flex">
+                                        <i class="ph ph-copy"></i>
+                                    </button>
+                                    <button @click="deletePassword(index)" class="text-red-600 hover:underline flex">
+                                        <i class="ph ph-trash"></i>
+                                    </button>
+                                </div>
                             </div>
+                            <p class="text-gray-600"
+                                x-text="passwords[index]?.show ? item.password : '•'.repeat(item.password.length)"></p>
                         </div>
                     </template>
                 </div>
             </div>
 
-            <div class="mb-4" x-cloak x-show="passwords.length < 5">
+            <div class="mb-4" x-cloak x-show="passwords.length < maxPasswords">
                 <input type="text" x-model="newPasswordName" placeholder="Password Name"
                     class="w-full mb-2 p-2 border border-gray-300 rounded-md mb-4" />
                 <button type="button" @click="storePassword"
