--- a/index.html
+++ b/index.html
@@ -2,132 +2,123 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An Alpine.js Password Manager application    ">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <title>Alpine.js · Password Manager</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="An Alpine.js Password Manager application">
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@latest/dist/cdn.min.js"></script>
-    <script defer src="https://unpkg.com/alpinejs"></script>
+  <title>Alpine.js · Password Manager</title>
 
-    <script src="password-manager.js"></script>
-    <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="src/styles/main.css" />
+
+  <script defer type="module" src="src/main.ts"></script>
 </head>
 
 <body class="bg-gray-100 text-gray-900 gradient-bg antialiased">
 
-    <main class="min-h-screen flex flex-col md:flex-row items-center justify-center gap-4 p-4" x-data="passwordManager"
-        x-init="init">
+  <main x-data="passwordGenerator" class="min-h-screen flex flex-col md:flex-row items-center justify-center gap-4 p-4">
 
-        <div class="bg-white shadow-lg rounded-lg p-6 max-w-lg w-full relative" aria-live="polite">
-            <h1 class="text-2xl font-bold mb-4 text-center">Password Generator</h1>
+    <div class="bg-white shadow-lg rounded-lg p-6 max-w-lg w-full relative" aria-live="polite">
+      <h1 class="text-2xl font-bold mb-4 text-center">Password Generator</h1>
 
-            <div class="mb-4">
-                <label for="length" class="block text-sm font-medium text-gray-700">Length: <strong
-                        x-text="length"></strong></label>
-                <input type="range" id="length" x-model="length" min="4" max="40" class="w-full mt-2" aria-valuemin="4"
-                    aria-valuemax="40" @input="generatePassword">
-            </div>
+      <div class="mb-4">
+        <label for="length" class="block text-sm font-medium text-gray-700">Length: <strong
+            x-text="length"></strong></label>
+        <input type="range" id="length" x-model="length" min="4" max="40" class="w-full mt-2" aria-valuemin="4"
+          aria-valuemax="40" @input="generatePassword">
+      </div>
 
-            <div class="mb-4">
-                <div class="mt-2 space-y-2">
-                    <div>
-                        <input type="checkbox" id="uppercase" x-model="includeUppercase" class="mr-2"
-                            @change="generatePassword">
-                        <label for="uppercase" class="text-sm">Include Uppercase (e.g. ABC)</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="numbers" x-model="includeDigits" class="mr-2"
-                            @change="generatePassword">
-                        <label for="numbers" class="text-sm">Include Digits (e.g. 123)</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="symbols" x-model="includeSymbols" class="mr-2"
-                            @change="generatePassword">
-                        <label for="symbols" class="text-sm">Include Symbols (e.g. @&$!#?)</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="ambiguous" x-model="includeAmbiguous" class="mr-2"
-                            @change="generatePassword">
-                        <label for="ambiguous" class="text-sm">Include Ambiguous (e.g. 1Il|, O0, Z2)</label>
-                    </div>
-                </div>
-            </div>
-
-            <div class="mb-4">
-                <label for="generated-password" class="block text-sm font-medium text-gray-700">Password:</label>
-                <div class="my-2 relative rounded-md shadow-sm">
-                    <input type="text" id="generated-password" x-model="password" readonly aria-readonly="true"
-                        class="block w-full pr-10 py-2 pl-3 text-lg border-gray-300 rounded-md bg-gray-100 cursor-text focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                        aria-describedby="regenerate-password" role="status" aria-live="polite">
-                    <button type="button" @click="generatePassword" aria-label="Generate new password"
-                        class="absolute inset-y-0 right-0 flex items-center justify-center w-10 h-full bg-blue-600 text-white rounded-r-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                        <i class="ph ph-arrow-clockwise"></i>
-                    </button>
-                </div>
-                <p class="text-sm mt-1">Strength: <strong x-text="passwordStrength"></strong></p>
-            </div>
-
-            <div class="mb-4">
-                <button type="button" @click="copyToClipboard()"
-                    class="w-full py-2 px-4 bg-blue-600 text-white rounded-md font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                    <i class="ph ph-copy"></i> Copy to Clipboard
-                </button>
-            </div>
+      <div class="mb-4">
+        <div class="mt-2 space-y-2">
+          <div>
+            <input type="checkbox" id="uppercase" x-model="includeUppercase" class="mr-2" @change="generatePassword">
+            <label for="uppercase" class="text-sm">Include Uppercase (e.g. ABC)</label>
+          </div>
+          <div>
+            <input type="checkbox" id="numbers" x-model="includeDigits" class="mr-2" @change="generatePassword">
+            <label for="numbers" class="text-sm">Include Digits (e.g. 123)</label>
+          </div>
+          <div>
+            <input type="checkbox" id="symbols" x-model="includeSymbols" class="mr-2" @change="generatePassword">
+            <label for="symbols" class="text-sm">Include Symbols (e.g. @&$!#?)</label>
+          </div>
+          <div>
+            <input type="checkbox" id="ambiguous" x-model="includeAmbiguous" class="mr-2" @change="generatePassword">
+            <label for="ambiguous" class="text-sm">Include Ambiguous (e.g. 1Il|, O0, Z2)</label>
+          </div>
         </div>
+      </div>
 
-        <div class="bg-white shadow-lg rounded-lg p-6 max-w-lg w-full min-h-[470px] flex flex-col relative"
-            aria-live="polite">
-            <h1 class="text-2xl font-bold mb-4 text-center">Password Manager</h1>
-
-            <div class="flex-1">
-                <p class="block text-sm font-medium text-gray-700">Stored: <strong
-                        x-text="`${passwords.length}/${maxPasswords}`"></strong></p>
-                <div x-cloak x-show="passwords.length > 0" class="space-y-2 mb-4">
-                    <template x-for="(item, index) in passwords" :key="index">
-                        <div class="flex flex-col bg-gray-50 p-2 rounded-md border border-gray-300">
-                            <div class="flex justify-between items-center">
-                                <p x-text="item.name"></p>
-                                <div class="flex items-center gap-x-2 justify-center">
-                                    <p x-text="getPasswordStrength(item.password)" class="text-sm text-gray-500"></p>
-                                    <button @click="passwords[index].show = !passwords[index].show"
-                                        class="hover:underline flex">
-                                        <i class="ph" :class="passwords[index]?.show ? 'ph-eye': 'ph-eye-slash'"></i>
-                                    </button>
-                                    <button @click="copyToClipboard(item.password)"
-                                        class="text-blue-600 hover:underline flex">
-                                        <i class="ph ph-copy"></i>
-                                    </button>
-                                    <button @click="deletePassword(index)" class="text-red-600 hover:underline flex">
-                                        <i class="ph ph-trash"></i>
-                                    </button>
-                                </div>
-                            </div>
-                            <p class="text-gray-600"
-                                x-text="passwords[index]?.show ? item.password : '•'.repeat(item.password.length)"></p>
-                        </div>
-                    </template>
-                </div>
-            </div>
-
-            <div class="mb-4" x-cloak x-show="passwords.length < maxPasswords">
-                <input type="text" x-model="newPasswordName" placeholder="Password Name"
-                    class="w-full mb-2 p-2 border border-gray-300 rounded-md mb-4" />
-                <button type="button" @click="storePassword"
-                    class="w-full py-2 px-4 bg-green-600 text-white rounded-md font-semibold hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                    <i class="ph ph-plus-circle"></i> Store new Password
-                </button>
-            </div>
+      <div class="mb-4">
+        <label for="generated-password" class="block text-sm font-medium text-gray-700">Password:</label>
+        <div class="my-2 relative rounded-md shadow-sm">
+          <input type="text" id="generated-password" x-model="password" readonly aria-readonly="true"
+            class="block w-full pr-10 py-2 pl-3 text-lg border-gray-300 rounded-md bg-gray-100 cursor-text focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+            aria-describedby="regenerate-password" role="status" aria-live="polite">
+          <button type="button" @click="generatePassword" aria-label="Generate new password"
+            class="absolute inset-y-0 right-0 flex items-center justify-center w-10 h-full bg-blue-600 text-white rounded-r-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+            <i class="ph ph-arrow-clockwise"></i>
+          </button>
         </div>
+        <p class="text-sm mt-1">Strength: <strong x-text="getPasswordStrength(password)"></strong></p>
+      </div>
 
-        <p x-text="feedback" :class="feedbackClass" class="mt-2 text-sm feedback" x-cloak x-show="feedback"
-            aria-live="polite">
-        </p>
-    </main>
+      <div class="mb-4">
+        <button type="button" @click="copyToClipboard(password)"
+          class="w-full py-2 px-4 bg-blue-600 text-white rounded-md font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <i class="ph ph-copy"></i> Copy to Clipboard
+        </button>
+      </div>
+    </div>
+
+    <div x-data="passwordManager"
+      class="bg-white shadow-lg rounded-lg p-6 max-w-lg w-full min-h-[470px] flex flex-col relative" aria-live="polite">
+      <h1 class="text-2xl font-bold mb-4 text-center">Password Manager</h1>
+
+      <div class="flex-1">
+        <p class="block text-sm font-medium text-gray-700">Stored: <strong
+            x-text="`${passwords.length}/${maxPasswords}`"></strong></p>
+        <div x-cloak x-show="passwords.length > 0" class="space-y-2 mb-4">
+          <template x-for="(item, index) in passwords" :key="index">
+            <div class="flex flex-col bg-gray-50 p-2 rounded-md border border-gray-300">
+              <div class="flex justify-between items-center">
+                <p x-text="item.name"></p>
+                <div class="flex items-center gap-x-2 justify-center">
+                  <p x-text="getPasswordStrength(item.password)" class="text-sm text-gray-500"></p>
+                  <button @click="passwords[index].show = !passwords[index].show" class="hover:underline flex">
+                    <i class="ph" :class="passwords[index]?.show ? 'ph-eye': 'ph-eye-slash'"></i>
+                  </button>
+                  <button @click="copyToClipboard(item.password)" class="text-blue-600 hover:underline flex">
+                    <i class="ph ph-copy"></i>
+                  </button>
+                  <button @click="deletePassword(index)" class="text-red-600 hover:underline flex">
+                    <i class="ph ph-trash"></i>
+                  </button>
+                </div>
+              </div>
+              <p class="text-gray-600"
+                x-text="passwords[index]?.show ? item.password : '•'.repeat(item.password.length)"></p>
+            </div>
+          </template>
+        </div>
+      </div>
+
+      <div class="mb-4" x-cloak x-show="passwords.length < maxPasswords">
+        <input type="text" x-model="newPasswordName" placeholder="Password Name"
+          class="w-full p-2 border border-gray-300 rounded-md mb-4" />
+        <button type="button" @click="storePassword(password)"
+          class="w-full py-2 px-4 bg-green-600 text-white rounded-md font-semibold hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <i class="ph ph-plus-circle"></i> Store new Password
+        </button>
+      </div>
+    </div>
+
+    <p x-text="$store.feedback.message" :class="$store.feedback.type" class="mt-2 text-sm feedback" x-cloak
+      x-show="$store.feedback.message" aria-live="polite">
+    </p>
+    </p>
+  </main>
 
 </body>
 
